css attempt to fix white bar on bottom of screen when scrolling on mobile

--- a/travel.css
+++ b/travel.css
@@ -14,7 +14,8 @@
 html, body {
     scroll-behavior: smooth;
     height:100%;
-
+    height: 100vh;
+    height: 100dvh;
 }
 @media screen and (min-width: 815px){
     html, body {
